[package]
name = "robson-caetano-v2"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serenity = { version = "0.11", features = ["cache", "client", "voice"], default-features = false }
songbird = { version = "0.3.0", features = ["gateway", "builtin-queue", "yt-dlp"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.3.1"
url-escape = "0.1.1"